# ctx

./: .gitignore  README.md  ctx  ctx.cmd  ctx.py  install.ps1  install.sh  pyproject.toml
.github/workflows/: ci.yml
contextdrop/: __init__.py  __main__.py  cli.py  config.py  constants.py
contextdrop/commands/: doctor.py  init.py  load.py  parse.py  save.py  tasks.py  watch.py
contextdrop/core/: __init__.py  context_builder.py  summarizer.py  tokenizer.py
contextdrop/services/: clipboard.py  filesystem.py  git.py  parser.py
contextdrop/utils/: formatting.py  logging.py
scripts/: check.ps1  check.sh
tests/: test_commands.py
