[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "contextdrop"
version = "0.1.0"
description = "A small CLI project brain for agent handoffs."
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
ctx = "contextdrop.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["contextdrop*"]
